committing a more complex checkpoint

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>kaizo quest</title>
+    <title>Kaizo Quest</title>
 
     <link data-trunk rel="css" href="styles.css" />
     <link data-trunk rel="copy-dir" href="resources" />
